--- a/src/sage/plot/plot3d/threejs_template.html
+++ b/src/sage/plot/plot3d/threejs_template.html
@@ -67,6 +67,8 @@
 
     var rRange = Math.sqrt( Math.pow( b[1].x - b[0].x, 2 )
                             + Math.pow( b[1].x - b[0].x, 2 ) );
+    var xRange = b[1].x - b[0].x;
+    var yRange = b[1].y - b[0].y;
     var zRange = b[1].z - b[0].z;
 
     var a = [ 1, 1, 1 ]; // aspect multipliers
@@ -125,12 +127,12 @@
         scene.add( sprite );
     }
 
-    // scene.add( new THREE.AxisHelper( Math.min( [ b[1].x, b[1].y, a[2]*b[1].z ] ) ) );
+    // scene.add( new THREE.AxisHelper( Math.min( b[1].x, b[1].y, a[2]*b[1].z ) ) );
 
     var camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 0.1, 1000 ); 
     camera.up.set( 0, 0, 1 );
-    var cameraOut = a[2]*zRange;
-    camera.position.set( cameraOut, 1.3*cameraOut, .7*cameraOut );
+    var cameraOut = Math.max( xRange, yRange, a[2]*zRange );
+    camera.position.set( cameraOut, cameraOut, cameraOut );
     camera.lookAt( scene.position );
 
     var controls = new THREE.OrbitControls( camera, renderer.domElement );
