--- a/src/sage/plot/plot3d/threejs_template.html
+++ b/src/sage/plot/plot3d/threejs_template.html
@@ -134,7 +134,7 @@
         scene.add( sprite );
     }
 
-    // scene.add( new THREE.AxisHelper( Math.min( a[0]*b[1].x, a[1]*b[1].y, a[2]*b[1].z ) ) );
+    if ( options.axes ) scene.add( new THREE.AxisHelper( Math.min( a[0]*b[1].x, a[1]*b[1].y, a[2]*b[1].z ) ) );
 
     var camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 0.1, 1000 );
     camera.up.set( 0, 0, 1 );
