--- a/src/sage/plot/plot3d/threejs_template.html
+++ b/src/sage/plot/plot3d/threejs_template.html
@@ -174,7 +174,8 @@
         var texture = new THREE.Texture( canvas );
         texture.needsUpdate = true;
         var material = new THREE.PointsMaterial( { size: json.size/100, map: texture,
-                                                   transparent: true, alphaTest: .1   } );
+                                                   transparent: true, opacity: json.opacity,
+                                                   alphaTest: .1 } );
         scene.add( new THREE.Points( geometry, material ) );
     }
 
@@ -192,7 +193,8 @@
             var v = json.points[i+1];
             geometry.vertices.push( new THREE.Vector3( a[0]*v[0], a[1]*v[1], a[2]*v[2] ) );
         }
-        var material = new THREE.LineBasicMaterial( { color: json.color } );
+        var material = new THREE.LineBasicMaterial( { color: json.color, linewidth: json.linewidth,
+                                                      transparent: true, opacity: json.opacity } );
         scene.add( new THREE.LineSegments( geometry, material ) );
     }
 
@@ -217,7 +219,7 @@
         geometry.computeVertexNormals();
         var material = new THREE.MeshPhongMaterial( {
                                      color: json.color , side: THREE.DoubleSide,
-                                     transparent: true, opacity: options.opacity,
+                                     transparent: true, opacity: json.opacity,
                                      shininess: 20 } );
         scene.add( new THREE.Mesh( geometry, material ) );
     }
