--- a/src/sage/plot/plot3d/threejs_template.html
+++ b/src/sage/plot/plot3d/threejs_template.html
@@ -102,10 +102,8 @@
     }
 
     var texts = SAGE_TEXTS;
-    for ( var i=0 ; i < texts.length ; i++ ) {
-        eval( 'var json = ' + texts[i] );
-        addLabel( json.text, json.x, json.y, json.z );
-    }
+    for ( var i=0 ; i < texts.length ; i++ )
+        addLabel( texts[i].text, texts[i].x, texts[i].y, texts[i].z );
 
     function addLabel( text, x, y, z ) {
         var fontsize = 14;
@@ -149,10 +147,7 @@
     } );
     
     var points = SAGE_POINTS;
-    for ( var i=0 ; i < points.length ; i++ ) {
-        eval( 'var json = ' + points[i] );
-        addPoint( json );
-    }
+    for ( var i=0 ; i < points.length ; i++ ) addPoint( points[i] );
 
     function addPoint( json ) {
         var geometry = new THREE.Geometry();
@@ -177,10 +172,7 @@
     }
 
     var lines = SAGE_LINES;
-    for ( var i=0 ; i < lines.length ; i++ ) {
-        eval( 'var json = ' + lines[i] );
-        addLine( json );
-    }
+    for ( var i=0 ; i < lines.length ; i++ ) addLine( lines[i] );
 
     function addLine( json ) {
         var geometry = new THREE.Geometry();
@@ -196,10 +188,7 @@
     }
 
     var surfaces = SAGE_SURFACES;
-    for ( var i=0 ; i < surfaces.length ; i++ ) {
-        eval( 'var json = ' + surfaces[i] );
-        addSurface( json );
-    }
+    for ( var i=0 ; i < surfaces.length ; i++ ) addSurface( surfaces[i] );
 
     function addSurface( json ) {
         var geometry = new THREE.Geometry();
